--- a/src/app/shared/page-error/page-error.component.html
+++ b/src/app/shared/page-error/page-error.component.html
@@ -1,1 +1,22 @@
 <p>page-error works!</p>
+
+<ul>
+    <li>
+        <a routerLink="/auth/login">Ir a login</a>
+    </li>
+    <li>
+        <a routerLink="/auth/registro">Ir a registro</a>
+    </li>
+    <li>
+        <a routerLink="/heroes/agregar">Ir agregar</a>
+    </li>
+    <li>
+        <a routerLink="/heroes/buscar">Buscar</a>
+    </li>
+    <li>
+        <a routerLink="/heroes/heroe">Heroe</a>
+    </li>
+    <li>
+        <a routerLink="/heroes/listado">Listado</a>
+    </li>
+</ul>
