--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -16,7 +16,7 @@
                 <mat-icon mat-list-icon>perm_identity</mat-icon>
                 <small>Agregar</small>
             </a>
-            <a routerLink="./listado" mat-list-item (click)="sidenav.toggle()">
+            <a routerLink="./listadoHeroes" mat-list-item (click)="sidenav.toggle()">
                 <mat-icon mat-list-icon>list</mat-icon>
                 <small>Lista de superhéores</small>
             </a>
