--- a/src/app/shared/page-error/page-error.component.html
+++ b/src/app/shared/page-error/page-error.component.html
@@ -1,6 +1,6 @@
 <p>page-error works!</p>
 
-<ul>
+<!-- <ul>
     <li>
         <a routerLink="/auth/login">Ir a login</a>
     </li>
@@ -17,6 +17,6 @@
         <a routerLink="/heroes/heroe">Heroe</a>
     </li>
     <li>
-        <a routerLink="/heroes/listado">Listado</a>
+        <a routerLink="/heroes/listadoHeroes">Listado</a>
     </li>
-</ul>
+</ul> -->
