Implementacion de la rutar ver heroe

--- a/src/app/heroes/pages/listado/listado.component.html
+++ b/src/app/heroes/pages/listado/listado.component.html
@@ -4,28 +4,7 @@
     <div class="col-md-12">
         <div class="row">
             <div class="col-md-3" *ngFor="let heroe of heroes">
-                <mat-card class="card-heroe">
-                    <mat-card-header>
-                        <mat-card-title>{{ heroe.superhero }}</mat-card-title>
-                        <mat-card-subtitle>{{ heroe.alter_ego }}</mat-card-subtitle>
-                    </mat-card-header>
-                    <img mat-card-image src="assets/heroes/{{ heroe.id }}.jpg">
-                    <mat-card-content>
-                        <h3>{{ heroe.publisher}}</h3>
-                        <p>Primera aparicion en: <b>{{ heroe.first_appearance }}</b></p>
-                        <p>Personaje: <b>{{ heroe.characters}}</b></p>
-                    </mat-card-content>
-                        <mat-card-actions class="item">
-                            <button mat-raised-button color="primary">
-                                <mat-icon>admin_panel_settings</mat-icon>
-                                Ver
-                            </button>
-                            <button mat-raised-button color="accent">
-                                <mat-icon>edit</mat-icon>
-                                Editar
-                            </button>
-                        </mat-card-actions>
-                </mat-card>
+                <app-heroe-tarjeta [heroe]="heroe"></app-heroe-tarjeta>
                 <br>
             </div>
         </div>
