--- a/src/app/heroes/pages/heroe/heroe.component.html
+++ b/src/app/heroes/pages/heroe/heroe.component.html
@@ -1,1 +1,21 @@
-<h3>Heroes</h3>
+<!-- <mat-grid-list cols="1" *ngIf="!heroe; else divHeroe">
+    <mat-grid-tile>
+        <mat-spinner></mat-spinner>
+    </mat-grid-tile>
+</mat-grid-list> -->
+
+<div class="" *ngIf="!heroe; else divHeroe">
+   <div class="d-flex justify-content-center">
+    <mat-spinner></mat-spinner>
+
+   </div>
+
+</div>
+
+<ng-template #divHeroe>
+    <div class="row justify-content-center">  
+
+    </div>
+    
+
+</ng-template>
