--- a/src/app/heroes/pages/heroe/heroe.component.html
+++ b/src/app/heroes/pages/heroe/heroe.component.html
@@ -1,21 +1,26 @@
-<!-- <mat-grid-list cols="1" *ngIf="!heroe; else divHeroe">
+<mat-grid-list cols="1" *ngIf="!heroe; else divHeroe">
     <mat-grid-tile>
         <mat-spinner></mat-spinner>
     </mat-grid-tile>
-</mat-grid-list> -->
-
-<div class="" *ngIf="!heroe; else divHeroe">
-   <div class="d-flex justify-content-center">
-    <mat-spinner></mat-spinner>
-
-   </div>
-
-</div>
+</mat-grid-list>
 
 <ng-template #divHeroe>
-    <div class="row justify-content-center">  
-
-    </div>
+    <div fxLayout="row" fxLayoutAlign="center center" fxLayout.xs="column" fxLayoutGap="40px">
+        <div fxFlex="50">
+            <!-- <mat-divider></mat-divider> -->
+            <img mat-card-image [src]="heroe | images" class="heroe-img">
     
+        </div>
+        <div fxFlex="50">
+            <h2 class="text-danger">{{ heroe.superhero}} - {{ heroe.publisher}}</h2>
+            <h3>Personaje: <b>{{ heroe.characters}}</b></h3>
+            <h3>Primera aparicion en: <b>{{ heroe.first_appearance }}</b></h3>
+            <button mat-raised-button color="warn" (click)="regresar()">
+                <mat-icon>arrow_back</mat-icon>
+                Regresar
+            </button>
+        </div>
+    </div>
+    <br>
 
 </ng-template>
