Arreglando botones en lista de Heroes

--- a/src/app/heroes/components/heroe-tarjeta/heroe-tarjeta.component.html
+++ b/src/app/heroes/components/heroe-tarjeta/heroe-tarjeta.component.html
@@ -9,7 +9,7 @@
         <p>Primera aparicion en: <b>{{ heroe.first_appearance }}</b></p>
         <p>Personaje: <b>{{ heroe.characters}}</b></p>
     </mat-card-content>
-    <mat-card-actions class="item">
+    <mat-card-actions class="botones-op" >
         <button
         mat-raised-button
         color="primary"
