Creacionde la pantalla agregar testear

--- a/src/app/heroes/pages/buscarar/buscarar.component.html
+++ b/src/app/heroes/pages/buscarar/buscarar.component.html
@@ -5,7 +5,7 @@
         <mat-form-field class="example-full-width col-md-12">
             <mat-label>Buscar heroe</mat-label>
             <input type="text" 
-                   placeholder="Pick one"
+                   placeholder="Buscar superhéroe"
                    aria-label="Number"
                    matInput 
                    [(ngModel)]="termino"
