--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,1 +1,49 @@
-<h2>Agregar</h2>
+<h1>Nuevo heroe <b>HEROE</b></h1>
+<mat-divider></mat-divider>
+<div class="row justify-content-center mt-5">
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-6">
+                        <mat-form-field fxFlex="100" fxLayout-xs="50">
+                            <mat-label>SuperHéroe</mat-label>
+                            <input matInput type="text" required>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-md-6">
+                        <mat-form-field fxFlex="100" fxLayout-xs="50">
+                            <mat-label>Alter ego</mat-label>
+                            <input matInput type="text" required>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-md-12">
+                        <mat-form-field fxFlex="100" fxLayout-xs="50">
+                            <mat-label>Primera aparición</mat-label>
+                            <input matInput type="text" required>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-md-12">
+                        <mat-form-field fxFlex="100" fxLayout-xs="50">
+                            <mat-label>Creador</mat-label>
+                            <mat-select>
+                                <mat-option>Primero</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+
+                    </div>
+                    <div class="card-body">
+                        <h3>Hrrrr</h3>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
