--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,4 +1,4 @@
-<h1>Nuevo heroe <b>HEROE</b></h1>
+<h1>Nuevo heroe <b>{{ heroe.superhero | titlecase}}</b></h1>
 <mat-divider></mat-divider>
 <div class="row justify-content-center mt-5">
     <div class="col-md-12">
@@ -8,39 +8,61 @@
                     <div class="col-md-6">
                         <mat-form-field fxFlex="100" fxLayout-xs="50">
                             <mat-label>SuperHéroe</mat-label>
-                            <input matInput type="text" required>
+                            <input matInput type="text" [(ngModel)]="heroe.superhero" required>
                         </mat-form-field>
                     </div>
                     <div class="col-md-6">
                         <mat-form-field fxFlex="100" fxLayout-xs="50">
                             <mat-label>Alter ego</mat-label>
-                            <input matInput type="text" required>
+                            <input matInput type="text" [(ngModel)]="heroe.alter_ego" required>
                         </mat-form-field>
                     </div>
                     <div class="col-md-12">
                         <mat-form-field fxFlex="100" fxLayout-xs="50">
                             <mat-label>Primera aparición</mat-label>
-                            <input matInput type="text" required>
+                            <input matInput type="text" [(ngModel)]="heroe.first_appearance" required>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-md-12">
+                        <mat-form-field fxFlex="100" fxLayout-xs="50">
+                            <mat-label>Personajes</mat-label>
+                            <input matInput type="text" [(ngModel)]="heroe.characters" required>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-md-12">
+                        <mat-form-field fxFlex="100" fxLayout-xs="50">
+                            <mat-label>Imagen URL</mat-label>
+                            <input matInput type="url" [(ngModel)]="heroe.alt_img" required>
                         </mat-form-field>
                     </div>
                     <div class="col-md-12">
                         <mat-form-field fxFlex="100" fxLayout-xs="50">
                             <mat-label>Creador</mat-label>
-                            <mat-select>
-                                <mat-option>Primero</mat-option>
+                            <mat-select [(ngModel)]="heroe.publisher" required>
+                                <mat-option *ngFor="let publisher of publishers" [value]="publisher.id">
+                                    {{ publisher.desc}}
+                                </mat-option>
                             </mat-select>
                         </mat-form-field>
+                    </div>
+
+                    <div class="col-md-12">
+                        <button
+                         mat-raised-button
+                          color="primary"
+                          fxFlex="100"
+                          fxLayout-xs="50"
+                          (click)="guardarHeroe()">
+                          <mat-icon>check</mat-icon> 
+                          Guardar
+                        </button>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="card">
-                    <div class="card-header">
-
-                    </div>
-                    <div class="card-body">
-                        <h3>Hrrrr</h3>
-
+                <div class="row">
+                    <div class="col-md-12">
+                        <img [src]="heroe | images" >
                     </div>
                 </div>
             </div>
