--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -59,10 +59,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mt-3">
                 <div class="row">
                     <div class="col-md-12">
-                        <img [src]="heroe | images" >
+                        <img [src]="heroe | images"  class="img-fluid mx-auto d-block" width="330" >
                     </div>
                 </div>
             </div>
