Prueba test de agregar

--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -39,7 +39,7 @@
 
                     </div>
                     <div class="card-body">
-                        <h3>Hrrrr</h3>
+                        <h3>Aqui va la imagen</h3>
 
                     </div>
                 </div>
