--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -59,7 +59,7 @@
                         <button fxFlex="100" fxLayout-xs="50"
                          mat-raised-button
                           color="warn"
-                          (click)="guardarHeroe()">
+                          (click)="borrarHeroe()">
                           <mat-icon>remove</mat-icon> 
                           Eliminar
                         </button>
