--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,4 +1,12 @@
-<h1>Nuevo heroe <b>{{ heroe.superhero | titlecase}}</b></h1>
+<div>
+
+    <span *ngIf="!heroe.id">
+        <h1>Nuevo heroe <b>{{ heroe.superhero | titlecase}}</b></h1>
+    </span>
+    <span *ngIf="heroe.id">
+        <h1>Editar heroe <b>{{ heroe.superhero | titlecase}}</b></h1>
+    </span>
+</div>
 <mat-divider></mat-divider>
 <div class="row justify-content-center mt-5">
     <div class="col-md-12">
@@ -47,23 +55,23 @@
                     </div>
 
                     <div class="col-md-12">
-                        <button fxFlex="100" fxLayout-xs="50"
-                         mat-raised-button
-                          color="primary"
-                          (click)="guardarHeroe()">
-                          <mat-icon>check</mat-icon> 
-                          Guardar
+                        <button fxFlex="100" fxLayout-xs="50" mat-raised-button color="primary"
+                            (click)="guardarHeroe()">
+                            <span *ngIf="!heroe.id">
+                                <mat-icon>check</mat-icon>
+                                Crear
+                            </span>
+                            <span *ngIf="heroe.id">
+                                <mat-icon>edit</mat-icon>
+                                Actualizar
+                            </span>
                         </button>
-                    </div>    
+                    </div>
                     <div class="col-md-12 mt-3">
-                        <button *ngIf="heroe.id"
-                         mat-raised-button
-                          color="warn"
-                          fxFlex="100"
-                          fxLayout-xs="50"
-                          (click)="borrarHeroe()">
-                          <mat-icon>delete_outline</mat-icon> 
-                          Borrar
+                        <button *ngIf="heroe.id" mat-raised-button color="warn" fxFlex="100" fxLayout-xs="50"
+                            (click)="borrarHeroe()">
+                            <mat-icon>delete_outline</mat-icon>
+                            Borrar
                         </button>
                     </div>
                 </div>
@@ -71,7 +79,7 @@
             <div class="col-md-6 mt-3">
                 <div class="row">
                     <div class="col-md-12">
-                        <img [src]="heroe | images"  class="img-fluid mx-auto d-block" width="330" >
+                        <img [src]="heroe | images" class="img-fluid mx-auto d-block" width="330">
                     </div>
                 </div>
             </div>
