Vista de login testear

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<div class="container">
+    <div class="d-flex justify-content-center mt-5">
+            <button 
+            mat-raised-button 
+            color="primary"
+            (click)="login()">
+                <mat-icon>login</mat-icon>
+                Iniciar sesión
+            </button>
+    </div>
+</div>
