--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -27,7 +27,10 @@
             <mat-icon>menu</mat-icon>
         </button>
         <small class="espacio"></small>
-        <button mat-stroked-button color="warn">
+        <button
+         mat-stroked-button
+          color="warn"
+          (click)="logout()">
             Logout
         </button>
     </mat-toolbar>
