--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -27,7 +27,7 @@
             <mat-icon>menu</mat-icon>
         </button>
         <small class="espacio"></small>
-        <span>{{ user.usuario }}</span>
+        <span class="mr-5">{{ user.usuario }}</span>
         <button
          mat-stroked-button
           color="warn"
